# jellyfish

./: docker-compose.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/src/: database.py  main.py
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  Chat.tsx  LoginForm.tsx  index.tsx
frontend/src/stores/: Messages.ts  User.tsx  index.ts
